Closed Bug 491192 Opened 15 years ago Closed 15 years ago

fixing xpcshell error message

Categories

(Core :: XPConnect, defect)

defect
Not set
trivial

Tracking

()

RESOLVED FIXED
mozilla1.9.2a1

People

(Reporter: timeless, Assigned: timeless)

Details

(Keywords: fixed1.9.1, Whiteboard: [fixed1.9.1b99])

Attachments

(1 file)

      No description provided.
Attachment #375513 - Flags: superreview?(cbiesinger)
Attachment #375513 - Flags: review?(ted.mielczarek)
Attachment #375513 - Flags: review?(ted.mielczarek) → review+
Attachment #375513 - Flags: superreview?(cbiesinger) → superreview+
Keywords: checkin-needed
Target Milestone: --- → mozilla1.9.2a1
Comment on attachment 375513 [details] [diff] [review]
patch
[Checkin: Comment 2 & 3]


http://hg.mozilla.org/mozilla-central/rev/dc5f29ebaf2e
Attachment #375513 - Attachment description: patch → patch [Checkin: Comment 2]
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite-
OS: Mac OS X → All
Hardware: x86 → All
Resolution: --- → FIXED
Whiteboard: [needs 1.9.1 landing]
Comment on attachment 375513 [details] [diff] [review]
patch
[Checkin: Comment 2 & 3]


http://hg.mozilla.org/releases/mozilla-1.9.1/rev/477c036e1944
Attachment #375513 - Attachment description: patch [Checkin: Comment 2] → patch [Checkin: Comment 2 & 3]
Whiteboard: [needs 1.9.1 landing] → [fixed1.9.1b5]
Whiteboard: [fixed1.9.1b5] → [fixed1.9.1b99]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: