Bug 491192 - fixing xpcshell error message; r=ted.mielczarek sr=cbiesinger